2006-10-24  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/specific.m4 (_AC_SYS_LARGEFILE_MACRO_VALUE):
	If FUNCTION-BODY is nonempty, use AC_LINK_IFELSE rather than
	AC_COMPILE_IFELSE, to work around problem with OSF/1 4.0F fseeko
	reported by Nelson H. F. Beebe for Coreutils 6.4.

	* tests/tools.at (autoconf --trace: user macros): Remove test
	for tracing multiline macros, since m4 1.4.7a uses a different
	way to number lines.  Problem reported by Ralf Wildenhues.

2006-10-24  Stepan Kasal  <kasal@ucw.cz>

	* bin/autom4te.in (handle_m4): Do not redirect stdin to
	/dev/null since the heuristics for interactive behaviour was
	fixed in CVS m4.

	* bin/autom4te.in: With --force, always refresh the output
	file.  Problem reported by Greg Schafer <gschafer@zip.com.au>.

	* bin/autoconf.as: Fix the verbose message at the end.

2006-10-23  Paul Eggert  <eggert@cs.ucla.edu>

	* configure.ac (AC_INIT): Bump to 2.60c.
	* NEWS: Likewise.

2006-10-22  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Version 2.60b.

	Import this change from Texinfo:
	2006-10-15  Karl Berry  <karl@gnu.org>
	* build-aux/texinfo.tex: automake 1.10

	* NEWS: Remove AC_CACHE_CHECK_INT.
	* doc/autoconf.texi (Caching Results): Likewise.
	* lib/autoconf/general.m4 (_AC_CACHE_CHECK_INT): Renamed from
	AC_CACHE_CHECK_INT, since it's no longer public.
	* lib/autoconf/types.m4: All uses of AC_CACHE_CHECK_INT changed.
	* tests/base.at (AC_COMPUTE_INT): Test this, not AC_CACHE_CHECK_INT.

2006-10-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/autoconf.texi (Limitations of Usual Tools): Fix two typos.

2006-10-19  Eric Blake  <ebb9@byu.net>

	* lib/m4sugar/m4sugar.m4 (m4_mkstemp): New macro.
	(m4_maketemp): Avoid warnings with M4 1.9a.
	* lib/emacs/autoconf-mode.el (autoconf-font-lock-keywords): Color
	m4_mkstemp.
	* doc/autoconf.texi (Redefined M4 Macros): Document m4_mkstemp.
	* NEWS: Likewise.

2006-10-16  Eric Blake  <ebb9@byu.net>

	* doc/autoconf.texi (Setting Output Variables): Fix typo.
