@@ -1,3 +1,7 @@
+2006-10-24  Stepan Kasal  <kasal@ucw.cz>
+
+	* tools/trace.at (autoconf --trace: user macros): Test `$%'.
+
 2006-10-24  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* lib/autoconf/specific.m4 (_AC_SYS_LARGEFILE_MACRO_VALUE):
